initial remapping and restructuration before i fall into the hell that is university why did this commit not save though >:( anyways its time to do EVENTS WHY DOES ARCH API HAVE WRONG MAPPINGS i cant use it here :( also i used loom for common until i though that arch doesnt work because loom maps libs to intermediary or something and doesnt work so i changed it to neogradle but it still doesnt work and since there isnt a commit for that common will have neogradlee for now, or something